# kice-os

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  build.rs  build.sh  kernel.c  link.ld  rust-toolchain.toml  x86_64-none-bare_metal.json  x86_64-unknown-kiceos-gnu.json
.cargo/: config.toml
boot/: boot_sect.asm  print.asm
iso/boot/grub/: grub.cfg
src/: Makefile  allocator.rs  config.rs  idt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  mem.rs  multiboot.rs  pic.rs  pit.rs  port.rs  start.asm  vga.rs  vga_buffer.rs
src/asm/: boot.asm  grub.cfg  linker.ld  multiboot2.asm  multiboot_header.asm  timer_stub.asm
src/boot/: boot.asm  grub.cfg
src/drivers/: mod.rs
src/drivers/input/: keyboard.rs
src/drivers/timer/: pit.rs
src/drivers/video/: vga.rs
src/kernel/: config.rs  mod.rs  multiboot.rs
src/kernel/interrupts/: idt.rs  mod.rs  pic.rs
src/kernel/memory/: bump_allocator.rs  paging.rs
src/utils/: mod.rs  port.rs
