[package]
name = "kice-os"
version = "0.1.0"
edition = "2021"
authors = ["SwimmingMantarain@gmail.com"]
description = "A custom operating system named after my cat"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
